src/terraform/aws/pardot-ci/artifact_cache.tf
resource "aws_security_group" "artifact_cache_http_lb" {
  name = "artifact_cache_http_lb"
  description = "internal artifact cache load balancing"
  vpc_id = "${aws_vpc.pardot_ci.id}"

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = [
      "${aws_vpc.pardot_ci.cidr_block}",
      "${var.pardotops_appdev_vpc_cidr}"
    ]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "external_artifact_cache_http_lb" {
  name = "external_artifact_cache_http_lb"
  description = "external artifact cache load balancing"
  vpc_id = "${aws_vpc.pardot_ci.id}"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = "${var.aloha_vpn_cidr_blocks}"
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = "${var.aloha_vpn_cidr_blocks}"
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = [
      "${aws_eip.pardot_ci_nat_gw.public_ip}/32",
      "${var.pardotops_appdev_vpc_nat_gw_public_ip}/32"
    ]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "artifact_cache_server" {
  name = "artifact_cache_server"
  description = "Allow HTTP from Artifact Cache LB"
  vpc_id = "${aws_vpc.pardot_ci.id}"

  # SSH from bastion
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = [
      "${var.pardot2-bastion1-1-ue1_aws_pardot_com_private_ip}",
      "${var.pardot2-bastion1-1-ue1_aws_pardot_com_public_ip}"
    ]
  }

  ingress = {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_groups = [
      "${aws_security_group.artifact_cache_http_lb.id}",
      "${aws_security_group.external_artifact_cache_http_lb.id}"
    ]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_elb" "artifact_cache_lb" {
  name = "artifact-cache-lb"
  security_groups = ["${aws_security_group.artifact_cache_http_lb.id}"]
  subnets = [
    "${aws_subnet.pardot_ci_us_east_1a.id}",
    "${aws_subnet.pardot_ci_us_east_1c.id}",
    "${aws_subnet.pardot_ci_us_east_1b.id}",
    "${aws_subnet.pardot_ci_us_east_1e.id}",
  ]
  cross_zone_load_balancing = true
  connection_draining = true
  connection_draining_timeout = 30
  internal = true

  instances = [
    "${aws_instance.artifact_cache_server_1.id}",
    "${aws_instance.artifact_cache_server_2.id}",
    "${aws_instance.artifact_cache_server_3.id}",
    "${aws_instance.artifact_cache_server_4.id}"
  ]

  listener {
    lb_port = 80
    lb_protocol = "http"
    instance_port = 80
    instance_protocol = "http"
  }

  listener {
    lb_port = 443
    lb_protocol = "https"
    instance_port = 80
    instance_protocol = "http"
    ssl_certificate_id = "arn:aws:iam::364709603225:server-certificate/dev.pardot.com-2016-with-intermediate"
  }

  health_check {
    healthy_threshold = 2
    unhealthy_threshold = 2
    timeout = 3
    target = "TCP:80"
    interval = 5
  }

  tags {
    Name = "internal-artifact-cache-lb"
  }
}

resource "aws_elb" "external_artifact_cache_lb" {
  name = "external-artifact-cache-lb"
  security_groups = ["${aws_security_group.external_artifact_cache_http_lb.id}"]
  subnets = [
    "${aws_subnet.pardot_ci_us_east_1a_dmz.id}",
    "${aws_subnet.pardot_ci_us_east_1c_dmz.id}",
    "${aws_subnet.pardot_ci_us_east_1b_dmz.id}",
    "${aws_subnet.pardot_ci_us_east_1e_dmz.id}",
  ]
  cross_zone_load_balancing = true
  connection_draining = true
  connection_draining_timeout = 30

  instances = [
    "${aws_instance.artifact_cache_server_1.id}",
    "${aws_instance.artifact_cache_server_2.id}",
    "${aws_instance.artifact_cache_server_3.id}",
    "${aws_instance.artifact_cache_server_4.id}"
  ]

  listener {
    lb_port = 80
    lb_protocol = "http"
    instance_port = 80
    instance_protocol = "http"
  }

  listener {
    lb_port = 443
    lb_protocol = "https"
    instance_port = 80
    instance_protocol = "http"
    ssl_certificate_id = "arn:aws:iam::364709603225:server-certificate/dev.pardot.com-2016-with-intermediate"
  }

  health_check {
    healthy_threshold = 2
    unhealthy_threshold = 2
    timeout = 3
    target = "TCP:80"
    interval = 5
  }

  tags {
    Name = "external-artifact-cache-lb"
  }
}

resource "aws_instance" "artifact_cache_server_1" {
  ami = "${var.centos_6_hvm_ebs_ami}"
  instance_type = "c4.2xlarge"
  subnet_id = "${aws_subnet.pardot_ci_us_east_1a.id}"
  vpc_security_group_ids = ["${aws_security_group.artifact_cache_server.id}"]
  key_name = "internal_apps"
  disable_api_termination = true
  root_block_device {
    volume_type = "gp2"
    volume_size = "512"
    delete_on_termination = true
  }
  tags {
    terraform = "true"
    Name = "pardot2-artifactcache1-1-ue1"
  }
}

resource "aws_route53_record" "artifact_cache_server_1_Arecord" {
  zone_id = "${aws_route53_zone.pardot_ci_aws_pardot_com_hosted_zone.zone_id}"
  name = "pardot2-artifactcache1-1-ue1.${aws_route53_zone.pardot_ci_aws_pardot_com_hosted_zone.name}"
  records = ["${aws_instance.artifact_cache_server_1.private_ip}"]
  type = "A"
  ttl = "900"
}

resource "aws_instance" "artifact_cache_server_2" {
  ami = "${var.centos_6_hvm_ebs_ami}"
  instance_type = "c4.2xlarge"
  subnet_id = "${aws_subnet.pardot_ci_us_east_1c.id}"
  vpc_security_group_ids = ["${aws_security_group.artifact_cache_server.id}"]
  key_name = "internal_apps"
  disable_api_termination = true
  root_block_device {
    volume_type = "gp2"
    volume_size = "512"
    delete_on_termination = true
  }
  tags {
    terraform = "true"
    Name = "pardot2-artifactcache1-2-ue1"
  }
}

resource "aws_route53_record" "artifact_cache_server_2_Arecord" {
  zone_id = "${aws_route53_zone.pardot_ci_aws_pardot_com_hosted_zone.zone_id}"
  name = "pardot2-artifactcache1-2-ue1.${aws_route53_zone.pardot_ci_aws_pardot_com_hosted_zone.name}"
  records = ["${aws_instance.artifact_cache_server_2.private_ip}"]
  type = "A"
  ttl = "900"
}

resource "aws_instance" "artifact_cache_server_3" {
  ami = "${var.centos_6_hvm_ebs_ami}"
  instance_type = "c4.2xlarge"
  subnet_id = "${aws_subnet.pardot_ci_us_east_1b.id}"
  vpc_security_group_ids = ["${aws_security_group.artifact_cache_server.id}"]
  key_name = "internal_apps"
  disable_api_termination = true
  root_block_device {
    volume_type = "gp2"
    volume_size = "512"
    delete_on_termination = true
  }
  tags {
    terraform = "true"
    Name = "pardot2-artifactcache1-3-ue1"
  }
}

resource "aws_route53_record" "artifact_cache_server_3_Arecord" {
  zone_id = "${aws_route53_zone.pardot_ci_aws_pardot_com_hosted_zone.zone_id}"
  name = "pardot2-artifactcache1-3-ue1.${aws_route53_zone.pardot_ci_aws_pardot_com_hosted_zone.name}"
  records = ["${aws_instance.artifact_cache_server_3.private_ip}"]
  type = "A"
  ttl = "900"
}

resource "aws_instance" "artifact_cache_server_4" {
  ami = "${var.centos_6_hvm_ebs_ami}"
  instance_type = "c4.2xlarge"
  subnet_id = "${aws_subnet.pardot_ci_us_east_1e.id}"
  vpc_security_group_ids = ["${aws_security_group.artifact_cache_server.id}"]
  key_name = "internal_apps"
  disable_api_termination = true
  root_block_device {
    volume_type = "gp2"
    volume_size = "512"
    delete_on_termination = true
  }
  tags {
    terraform = "true"
    Name = "pardot2-artifactcache1-4-ue1"
  }
}

resource "aws_route53_record" "artifact_cache_server_4_Arecord" {
  zone_id = "${aws_route53_zone.pardot_ci_aws_pardot_com_hosted_zone.zone_id}"
  name = "pardot2-artifactcache1-4-ue1.${aws_route53_zone.pardot_ci_aws_pardot_com_hosted_zone.name}"
  records = ["${aws_instance.artifact_cache_server_4.private_ip}"]
  type = "A"
  ttl = "900"
}
